@@ -1,3 +1,5 @@
+* Fix parsing of dicom-web/studies/../series/../instances/../bulk/.. routes
+
 2023-05-15 - v 0.5.2
 ====================
 
